# SO

./: indent.sh
Laborator/Lab 10/2-transmit/: transmit_client.c
Laborator/Lab 10/3-aio/: aio.c
Laborator/Lab 10/4-iocp/: aio.c  iocp.c
Laborator/Lab 11/2-epollpipe/: epoll.c
Laborator/Lab 11/4-kaio/: kaio.c
Laborator/Lab 12/1-mini/: mini.c
Laborator/Lab 5/1-counter/: counter.c
Laborator/Lab 5/2-adr_space/: adr_space.c
Laborator/Lab 5/3-alloc/: alloc.c
Laborator/Lab 5/4-gdb/: fault.c
Laborator/Lab 5/5-struct/: struct.c
Laborator/Lab 5/6-stack/: .gdb_history  Makefile  overflow.c
Laborator/Lab 5/7-trim/: trim.c
Laborator/Lab 5/8-endian/: endian.c
Laborator/Lab 6/: main.c
Laborator/Lab 6/4-cp/: mycp.c
Laborator/Lab 6/5-prot/: prot.c
Laborator/Lab 7/2-major/: column.c  row.c  script.sh
Laborator/Lab 7/4-find-char/: find-char.c  perf.data
Laborator/Lab 7/6-flowers/: flowers.c
Teme/SO - Tema 1 Multi-platform Development/: GNUmakefile  Makefile  README
Teme/SO - Tema 2 STDIO/: README
Teme/SO---Tema-1---Multi-platform-HashTable-master/: GNUmakefile  Makefile  README
Teme/SO---Tema-1---Multi-platform-HashTable-master/src/: CMakeLists.txt  main.c
Teme/SO---Tema-1---Multi-platform-HashTable-master/src/hashtable/: hash.c  hash.h  hashtable.c  hashtable.h
Teme/SO---Tema-1---Multi-platform-HashTable-master/src/linkedlist/: linkedlist.c  linkedlist.h
Teme/SO---Tema-1---Multi-platform-HashTable-master/src/parser/: parser.c  paser.h
Teme/SO---Tema-1---Multi-platform-HashTable-master/src/utils/: utils.c  utils.h
(+54 files in other folders)
